--- a/index.html
+++ b/index.html
@@ -1,5 +1,2 @@
-Hello world check out my homepage!
-
-
-----------------------------
-http://username.github.io
+# MAE5180 FAST ROBOTS
+## Wenxin Li
