--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-# MAE5180 FAST ROBOTS
-## Wenxin Li
+<html>
+  <head>
+    <title>MAE5160 FAST ROBOTS</title>
+  </head>
+
+
+  <body>
+    <h1>Wenxin Li</h1>
+    
+    <h2>
+        ;)
+    </h2>
+
+  </body>
+</html>
