--- a/index.html
+++ b/index.html
@@ -33,10 +33,20 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav">
-				  <li><a href="index.html">Home</a></li>
-				  <li><a href="#">Projects</a></li>
-				  <li><a href="#publications">Publications</a></li> 
-				  <li><a href="#">CV</a></li> 
+				  <li><a href="">Lab1</a></li>
+				  <li><a href="">Lab2</a></li>
+				  <li><a href="">Lab2</a></li> 
+				  <li><a href="">Lab3</a></li> 
+			  	  <li><a href="">Lab4</a></li>
+				  <li><a href="">Lab5</a></li>
+				  <li><a href="">Lab6</a></li> 
+				  <li><a href="">Lab7</a></li>
+			  	  <li><a href="">Lab8</a></li>
+				  <li><a href="">Lab9</a></li>
+				  <li><a href="">Lab10</a></li> 
+				  <li><a href="">Lab11</a></li>
+				  <li><a href="">Lab12</a></li>
+				  <li><a href="">Lab13</a></li> 
 		  </ul>
 		</div>
 	  </div>
