--- a/index.html
+++ b/index.html
@@ -75,12 +75,10 @@
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
                 <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>John Doe</b></div><br>
-                <p><b>john at doe.com</b><br>
+                <p><b>wl635@cornell.edu</b><br>
                 <p>Mechanical Engineering<br>
                 Cornell University<br>
-                Street<br>
-                City <br>
-                Country<br>
+                
                 </p>
             </div>
             
