--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>John Doe</b></div><br>
+                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Wenxin Li</b></div><br>
                 <p><b>wl635@cornell.edu</b><br>
                 <p>Mechanical Engineering<br>
                 Cornell University<br>
@@ -83,7 +83,7 @@
             
             <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
-              <dd><a href="#">Google Scholar</a></dd> 
+              
               <dd><a href="#">Twitter</a></dd>
               <dd><a href="#">LinkedIn</a></dd>
             </div>
