--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="WechatIMG761.jpeg" alt=""><br>
+                <img class="img-responsive" src="WechatIMG761.jpeg" alt=""width="100" height="100"><br>
                 
                 <div style="margin-top:3%; text-align:justify;">                
 					<p>Hi! Welcome to my webpage. My name is Wenxin Li. I am a current master of Engineering student majoring in Mechanical Engineering at Cornell University. </p>
