--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p><b>wl635@cornell.edu</b><br>
                 <p>Mechanical Engineering<br>
                 Cornell University<br>
-                
+                <img class="img-responsive" src="WechatIMG761.jpeg" alt=""width="100" height="100"><br>
                 </p>
             </div>
             
