--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav">
+			  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">MainPage</a></li>
 				  <li><a href="">Lab1</a></li>
 				  <li><a href="">Lab2</a></li>
 				  <li><a href="">Lab2</a></li> 
