--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav">
 			  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">MainPage</a></li>
-			  <li class="nav-item"><a class="nav-link" href="lab/lab1.html">LAB 1</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab1.html">LAB 1</a></li>
 				  <li><a href="">Lab1</a></li>
 				  <li><a href="">Lab2</a></li>
 				  <li><a href="">Lab2</a></li> 
