--- a/index.html
+++ b/index.html
@@ -35,20 +35,19 @@
 		  <ul class="nav navbar-nav">
 			  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">MainPage</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab1.html">LAB 1</a></li>
-				  <li><a href="">Lab1</a></li>
-				  <li><a href="">Lab2</a></li>
-				  <li><a href="">Lab2</a></li> 
-				  <li><a href="">Lab3</a></li> 
-			  	  <li><a href="">Lab4</a></li>
-				  <li><a href="">Lab5</a></li>
-				  <li><a href="">Lab6</a></li> 
-				  <li><a href="">Lab7</a></li>
-			  	  <li><a href="">Lab8</a></li>
-				  <li><a href="">Lab9</a></li>
-				  <li><a href="">Lab10</a></li> 
-				  <li><a href="">Lab11</a></li>
-				  <li><a href="">Lab12</a></li>
-				  <li><a href="">Lab13</a></li> 
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab2.html">LAB 2</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab3.html">LAB 3</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab4.html">LAB 4</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab5.html">LAB 5</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab6.html">LAB 6</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab7.html">LAB 7</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab8.html">LAB 8</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab9.html">LAB 9</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab10.html">LAB 10</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab11.html">LAB 11</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab12.html">LAB 12</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab13.html">LAB 13</a></li>
+			 	  
 		  </ul>
 		</div>
 	  </div>
