--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<!--
+    Plain-Academic by Vasilios Mavroudis
+    Released under the Simplified BSD License/FreeBSD (2-clause) License.
+    https://github.com/mavroudisv/plain-academic
+-->
 
+<html lang="en">
+<head>
+  <title>Wenxin Li</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+</head>
+<body>
+	
+<!-- Navigation -->
+	<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+	  <div class="container">
+		<div class="navbar-header">
+		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+		</div>
+
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		  <ul class="nav navbar-nav">
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io">MainPage</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab1.html">LAB 1</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab2.html">LAB 2</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab3.html">LAB 3</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab4.html">LAB 4</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab5.html">LAB 5</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab6.html">LAB 6</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab7.html">LAB 7</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab8.html">LAB 8</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab9.html">LAB 9</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">LAB 10</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab11.html">LAB 11</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab12.html">LAB 12</a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab13.html">LAB 13</a></li>
+			 	  
+		  </ul>
+		</div>
+	  </div>
+	</nav>
+  
