--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -52,8 +52,21 @@
 	  </div>
 	</nav>
   
+	<div id="main_content_wrap" class="outer">
+	<section id="main_content" class="inner">
+	<h2 id="lab-1">Lab 1-The Artemis board</h2>
+	<h3 id="objective">Objective:</h3>
 
-	<h2>Lab1-The Artemis board</h2>
-	<h3>1. Blink it Up</h3>
-	<p>
+
+	<h3 id="Example-1-blink-it-up">Example 1: Blink it Up</h3>
+	
+	<h3 id="example-2-serial">Example 2: Serial</h3>
+	
+	<h3 id="example-3-analogread">Example 3: AnalogRead</h3>
+	
+		
+	<h3 id="example-4-microphone-output">Example4: Microphone Output</h3>
+		
+		
+	
 	
