--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -60,11 +60,11 @@
 		
 	<h2 id="lab-1">Lab 1-The Artemis board</h2>
 	<h3 id="setup">Setup</h3>
-
+	<p>In lab 1, we are required to 
 
 	<h3 id="Example-1-blink-it-up">Example 1: Blink it Up</h3>
 		<p> </p>
-	<iframe width="560" height="315" src="https://www.youtube.com/shorts/SlHl3MZRQFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+	<iframe width="560" height="315" src="https://youtube.com/shorts/SlHl3MZRQFc?feature=share" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 
 	<h3 id="example-2-serial">Example 2: Serial</h3>
 	
