--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -57,6 +57,10 @@
 	      
 	<div id="main_content_wrap" class="outer">
 	<section id="main_content" class="inner">
+	<article class="mb-4">
+        <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-9 col-lg-9 col-xl-9">
 		
 	<h2 id="lab-1">Lab 1-The Artemis board</h2>
 	<h3 id="setup">Setup</h3>
