--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -70,7 +70,7 @@
 	<h3 id="Example-1-blink-it-up">Example 1: Blink it Up</h3>
 		<p>The example code can be found in Example-Basics-Blink. Then I change the port to the correct one and click upload.
 		</p>
-	<iframe width="560" height="315" src="https://www.youtube.com/shorts/SlHl3MZRQFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=SlHl3MZRQFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 
 	<h3 id="example-2-serial">Example 2: Serial</h3>
 	
