--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -68,8 +68,11 @@
 		To be well perpared, the lastest version of Arduino and Aruduino Core for Apollo3 should be downloaded.</p>
 
 	<h3 id="Example-1-blink-it-up">Example 1: Blink it Up</h3>
-		<p>The example code can be found in Example-Basics-Blink. Then I change the port to the correct one and click upload.
-		</p>
+		<p>The example code can be found in Example-Basics-Blink. Then I change the port to the correct one and click upload button.
+		This code is using the loop to make the voltage change between low and high on every certain delay time. 
+		With low voltage, the light is off and vice versa. 
+		In this example, I use the default delay time 1000 miliseconds as the time  between the light on and off. 
+		So the frequency is 1000Hz.</p>
 	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=SlHl3MZRQFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 
 	<h3 id="example-2-serial">Example 2: Serial</h3>
