--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -73,7 +73,7 @@
 		With low voltage, the light is off and vice versa. 
 		In this example, I use the default delay time 1000 miliseconds as the time  between the light on and off. 
 		So the frequency is 1000Hz.</p>
-	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=SlHl3MZRQFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=SlHl3MZRQFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 	<h3 id="example-2-serial">Example 2: Serial</h3>
 	
