--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -76,6 +76,8 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=SlHl3MZRQFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 	<h3 id="example-2-serial">Example 2: Serial</h3>
+		<p>
+	<iframe width="560" height="315" src="https://youtu.be/CqkTpjx7A_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 	<h3 id="example-3-analogread">Example 3: AnalogRead</h3>
 	
