--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -76,7 +76,9 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=SlHl3MZRQFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 	<h3 id="example-2-serial">Example 2: Serial</h3>
-		<p>
+		<p>The example code is found in Example-Apollos3-Example04_serial. 
+		After uploading the code to the board, I can communication with the Artemis board by using the serial monitor. 
+		Notice, it is essential to change to the correct BAUD for the serial monitor. Otherwise, it shows messy code.</p>
 	<iframe width="560" height="315" src="https://youtu.be/CqkTpjx7A_o"></iframe>
 	
 	<h3 id="example-3-analogread">Example 3: AnalogRead</h3>
