--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -73,14 +73,40 @@
 		With low voltage, the light is off and vice versa. 
 		In this example, I use the default delay time 1000 miliseconds as the time  between the light on and off. 
 		So the frequency is 1000Hz.</p>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/SlHl3MZRQFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+	<div class="embed-container"> 
+ 		<iframe width="560" height="315"  
+ 		src="https://www.youtube.com/embed/SlHl3MZRQFc"  
+ 		frameborder="0" allowfullscreen></iframe> 
+ 	</div> 
+ 	<style> 
+ 	.embed-container { 
+	position: relative; 
+	padding-bottom: 56.25%; 
+ 	height: 0; 
+ 	overflow: hidden; 
+ 	max-width: 100%; 
+ 	} 
+ 	.embed-container iframe, 
+ 	.embed-container object, 
+ 	.embed-container embed { 
+ 	position: absolute; 
+ 	top: 0; 
+ 	left: 0; 
+ 	width: 100%; 
+ 	height: 100%; 
+ 	} 
+ 	</style> 
+		
+		
 	<h3 id="example-2-serial">Example 2: Serial</h3>
 		<p>The example code is found in Example-Apollos3-Example04_serial. 
 		After uploading the code to the board, I can communication with the Artemis board by using the serial monitor. 
 		Notice, it is essential to change to the correct BAUD for the serial monitor. Otherwise, it shows messy code.</p>
-	<iframe width="560" height="315" src="https://youtube.com/embed/CqkTpjx7A_o"></iframe>
-	
+	<div class="embed-container"> 
+ 		<iframe width="560" height="315"  
+ 		src="https://www.youtube.com/embed/CqkTpjx7A_o"  
+ 		frameborder="0" allowfullscreen></iframe> 
+ 	</div> 
 	<h3 id="example-3-analogread">Example 3: AnalogRead</h3>
 		<p></p>
 		
