--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -63,9 +63,18 @@
         <div class="col-md-9 col-lg-9 col-xl-9">
 		
 	<h2 id="lab-1">Lab 1-The Artemis board</h2>
+		
+	<h3 id="Objective">Objective</h3>
+		<p>The purpose for lab 1 is help us to be more familiar with the Arduino IDE and Artemis board. 
+		In this lab, there are 4 regular tasks and one task for graduate student only. 
+		I need to check the LED, temperature sensor, serial message, and microphone seperately. </p>
+			
+			
 	<h3 id="setup">Setup</h3>
 	<p>In lab 1, we are required to use 1 USB C-to-C or A-to-C cable to connect with the SparkFun RedBoard Artemis Nano.
 		To be well perpared, the lastest version of Arduino and Aruduino Core for Apollo3 should be downloaded.</p>
+	
+
 
 	<h3 id="Example-1-blink-it-up">Example 1: Blink it Up</h3>
 		<p>The example code can be found in Example-Basics-Blink. Then I change the port to the correct one and click upload button.
@@ -101,6 +110,7 @@
 	<h3 id="example-2-serial">Example 2: Serial</h3>
 		<p>The example code is found in Example-Apollos3-Example04_serial. 
 		After uploading the code to the board, I can communication with the Artemis board by using the serial monitor. 
+		As shown is the video below, whatever I typed in, it appears in the serial monitor. 
 		Notice, it is essential to change to the correct BAUD for the serial monitor. Otherwise, it shows messy code.</p>
 	<div class="embed-container"> 
  		<iframe width="560" height="315"  
@@ -109,6 +119,10 @@
  	</div> 
 	<h3 id="example-3-analogread">Example 3: AnalogRead</h3>
 		<p></p>
+		<iframe width="560" height="315"  
+ 		src="https://youtube.com/embed/9JF9a8wPVkc"  
+ 		frameborder="0" allowfullscreen></iframe>
+		
 		
 	<h3 id="example-4-microphone-output">Example4: Microphone Output</h3>
 		<p>
