--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<!--
-    Plain-Academic by Vasilios Mavroudis
-    Released under the Simplified BSD License/FreeBSD (2-clause) License.
-    https://github.com/mavroudisv/plain-academic
--->
 
 <html lang="en">
 <head>
@@ -118,7 +112,12 @@
  		frameborder="0" allowfullscreen></iframe> 
  	</div> 
 	<h3 id="example-3-analogread">Example 3: AnalogRead</h3>
-		<p></p>
+		<p>The example code is found in Example-Apollos3-Example2_AnalogRead. 
+		It is used to test the temperature sensor for the Artemis board. 
+		The specific temperature is still shown in the serial monitor. 
+		The BAUD value locates in the setup part. When touching the chip, the temperature read increase immediately. 
+		When leaving the chip, the temperature read decrease dramatically. </p>
+	<div class="embed-container"> 
 		<iframe width="560" height="315"  
  		src="https://youtube.com/embed/9JF9a8wPVkc"  
  		frameborder="0" allowfullscreen></iframe>
