--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -76,7 +76,6 @@
 		With low voltage, the light is off and vice versa. 
 		In this example, I use the default delay time 1000 miliseconds as the time  between the light on and off. 
 		So the frequency is 1000Hz.</p>
-
  		<iframe width="560" height="315"  
  		src="https://www.youtube.com/embed/SlHl3MZRQFc"  
  		frameborder="0" allowfullscreen></iframe> 
@@ -88,7 +87,6 @@
 		After uploading the code to the board, I can communication with the Artemis board by using the serial monitor. 
 		As shown is the video below, whatever I typed in, it appears in the serial monitor. 
 		Notice, it is essential to change to the correct BAUD for the serial monitor. Otherwise, it shows messy code.</p>
-
  		<iframe width="560" height="315"  
  		src="https://www.youtube.com/embed/CqkTpjx7A_o"  
  		frameborder="0" allowfullscreen></iframe> 
@@ -100,7 +98,6 @@
 		The specific temperature is still shown in the serial monitor. 
 		The BAUD value locates in the setup part. When touching the chip, the temperature read increase immediately. 
 		When leaving the chip, the temperature read decrease dramatically. </p>
-	
 		<iframe width="560" height="315"  
  		src="https://youtube.com/embed/9JF9a8wPVkc"  
  		frameborder="0" allowfullscreen></iframe>
@@ -108,6 +105,10 @@
 		
 	<h3 id="example-4-microphone-output">Example4: Microphone Output</h3>
 		<p></p>
+		<iframe width="560" height="315"  
+ 		src="https://youtube.com/embed/IA40hOe-V_g"  
+ 		frameborder="0" allowfullscreen></iframe>
+		
 		
 	
 	
