--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -110,5 +110,10 @@
  		frameborder="0" allowfullscreen></iframe>
 		
 		
+	<h3 id="5000-level-taskst">5000 level tasks</h3>
+		<p></p>
+		<iframe width="560" height="315"  
+ 		src="https://youtube.com/embed/14vg4cIwu8g"  
+ 		frameborder="0" allowfullscreen></iframe>
 	
 	
