--- a/lab/lab1.html
+++ b/lab/lab1.html
@@ -104,13 +104,16 @@
 		
 		
 	<h3 id="example-4-microphone-output">Example4: Microphone Output</h3>
-		<p></p>
+		<p>The example code can be found in Example-PDM-MicrophoneOutput. 
+		This task can help to be familiar with the Artemis board to receive the voice using a pulse-density microphone. 
+		The serial monitor shows the loudest frequency the board received. 
+		I test it by knocking on my laptop. The frequency value increases from 0 dramatically. </p>
 		<iframe width="560" height="315"  
  		src="https://youtube.com/embed/IA40hOe-V_g"  
  		frameborder="0" allowfullscreen></iframe>
 		
 		
-	<h3 id="5000-level-taskst">5000 level tasks</h3>
+	<h3 id="example-5-5000-level-taskst">Example 5: 5000 level tasks</h3>
 		<p></p>
 		<iframe width="560" height="315"  
  		src="https://youtube.com/embed/14vg4cIwu8g"  
