--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -57,3 +57,6 @@
         <div class="col-md-9 col-lg-9 col-xl-9">
 		
 	<h2 id="lab-2">Lab 2-Bluetooth</h2>
+	
+	<h3 id="objective">Objective</h3>
+		<p>
