--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -59,4 +59,9 @@
 	<h2 id="lab-2">Lab 2-Bluetooth</h2>
 	
 	<h3 id="objective">Objective</h3>
+		<p>In lab 2, we are required to be familiar with Bluetooth communication between the computer and the Artemis board. 
+		To accomplish that, we use the Jupyter Notebook and Arduino programming language as a tool to send the message. 
+			Here, we only need to do some basic practice to prepare for future lab usage.</p>
+	
+	<h3 id="Setup">Setup</h3>
 		<p>
