--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -65,3 +65,14 @@
 	
 	<h3 id="Setup">Setup</h3>
 		<p>
+			
+	<img class="img-responsive" src="lab_pic/lab2/MAC address.jped"><br>
+			
+			
+			
+			
+			
+			
+			
+			
+			
