--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -68,6 +68,12 @@
 			
 	<img class="img-responsive" src="lab_pic/lab2/MAC address.jped"><br>
 			
+	
+	<img class="img-responsive" src="lab_pic/lab2/UUID_generate.jped"><br>
+			
+	<img class="img-responsive" src="lab_pic/lab2/Arduino_change.jped"><br>
+			
+	<img class="img-responsive" src="lab_pic/lab2/change_yaml.jped"><br>
 			
 			
 			
