--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -66,14 +66,14 @@
 	<h3 id="Setup">Setup</h3>
 		<p>
 			
-	<img class="img-responsive" src="lab_pic/lab2/MAC address.jped"/>
+	<img class="img-responsive" src="lab_pic/lab2/MAC address.jpeg"/>
 			
 	
-	<img class="img-responsive" src="lab_pic/lab2/UUID_generate.jped"/>
+	<img class="img-responsive" src="lab_pic/lab2/UUID_generate.jpeg"/>
 			
-	<img class="img-responsive" src="lab_pic/lab2/Arduino_change.jped"/>
+	<img class="img-responsive" src="lab_pic/lab2/Arduino_change.jpeg"/>
 			
-	<img class="img-responsive" src="lab_pic/lab2/change_yaml.jped"/>
+	<img class="img-responsive" src="lab_pic/lab2/change_yaml.jpeg"/>
 			
 			
 			
