--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -65,6 +65,9 @@
 	
 	<h3 id="Setup">Setup</h3>
 		<p>
+	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/version_check.jpeg"/>
+			
 			
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/MAC address.jpeg"/>
 			
@@ -75,7 +78,7 @@
 			
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/change_yaml.jpeg"/>
 			
-			
+	
 			
 			
 			
