--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -72,11 +72,11 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/MAC address.jpeg"/>
 			
 	
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/UUID_generate.jpeg"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/UUID_generate.jpeg" alt=""width="200" height="200"/>
 			
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/Arduino_change.jpeg"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/Arduino_change.jpeg" alt=""width="200" height="200"/>
 			
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/change_yaml.jpeg"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/change_yaml.jpeg" alt=""width="200" height="200"/>
 			
 	
 			
