--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -64,19 +64,20 @@
 			Here, we only need to do some basic practice to prepare for future lab usage.</p>
 	
 	<h3 id="Setup">Setup</h3>
-		<p>
-	
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/version_check.jpeg"/>
+		<p>To get started with lab 2, we have to do some environment setup. 
+		First, use "Python3" in the terminal to check the python version and make sure it is >3.9. 
+		Then, install venv and activate the virtual environment by sourcing it. 
+		The last step is to install the python package and start the Jupyter Nootbook using command Jupyter lab.</p>
 			
 			
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/MAC address.jpeg"/>
 			
 	
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/UUID_generate.jpeg" alt=""width="200" height="200"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/UUID_generate.jpeg" alt=""width=400" height="400"/>
 			
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/Arduino_change.jpeg" alt=""width="200" height="200"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/Arduino_change.jpeg" alt=""width="400" height="400"/>
 			
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/change_yaml.jpeg" alt=""width="200" height="200"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/change_yaml.jpeg" alt=""width="400" height="400"/>
 			
 	
 			
