--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -72,12 +72,11 @@
 		<p>Now, we are ready to set the connection between the computer and the Artemis board. 
 		The MAC address can be got by running the ble_arduino, which is shown below.</p>	
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/MAC address.jpeg"/>
-			
-	
+		<p>Then use the command provided to get a random UUID number.</p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/UUID_generate.jpeg" alt=""width=400" height="400"/>
-			
+		<p>The next step is to use the UUID number generated above and the MAC address to replace the ble_uuid_test_service number 
+		in ble_arduino and ble_service number and artemis_address in the "connection. yaml" file. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/Arduino_change.jpeg" alt=""width="600" height="600"/>
-			
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/change_yaml.jpeg" alt=""width="600" height="600"/>
 			
 	
