--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -70,16 +70,21 @@
 		The last step is to install the python package and start the Jupyter Nootbook using command Jupyter lab.</p>
 			
 		<p>Now, we are ready to set the connection between the computer and the Artemis board. 
-		The MAC address can be got by running the ble_arduino, which is shown below.</p>	
+		The MAC address can be got by running the ble_arduino, which is shown below.</p>
+		
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/MAC address.jpeg"/>
 		<p>Then use the command provided to get a random UUID number.</p>
+		
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/UUID_generate.jpeg" alt=""width=400" height="400"/>
 		<p>The next step is to use the UUID number generated above and the MAC address to replace the ble_uuid_test_service number 
 		in ble_arduino and ble_service number and artemis_address in the "connection. yaml" file. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/Arduino_change.jpeg" alt=""width="600" height="600"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/change_yaml.jpeg" alt=""width="600" height="600"/>
-			
-	
+		<p>Now, we are well prepared for the Bluetooth connection. First, run through the demo.ipynb to the Configuration part. 
+		And then, the serial monitor will automatically show the connection. </p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/demo_conncet.jpeg" alt=""width="600" height="600"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/arduino_connectl.jpeg" alt=""width="600" height="600"/>
+																       
 	<h3 id="task-1-echo">Task 1: ECHO</h3>
 			    
 	
