--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -55,4 +55,38 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-9 col-lg-9 col-xl-9">
 		
-	<h2 id="lab-3">Lab 3</h2>
+	<h2 id="lab-3-time-of-flight-sensors">Lab 3-Time of Flight Sensors</h2>
+		
+	
+		
+	<h3 id="objective">Objective</h3>
+		
+		
+	
+	<h3 id="prelab-discussion">Prelab Discussion</h3>
+		
+		
+	<h3 id="task-1-tof-sensor-connected">Task 1: ToF sensor connected</h3>
+		
+		
+		
+	<h3 id="task-2-Artemis-scanning-for-I2C-device">Task 2: Artemis scanning for I2C device</h3>
+		
+		
+		
+	<h3 id="task-3-sensor-data">Task 3: Sensor Data</h3>
+		
+		
+		
+	<h3 id="task-4-2-tof-sensor">Task 4: 2 ToF Sensor</h3>
+		
+		
+		
+	<h3 id="task-5-tof-sensor-speed">Task 5: ToF Sensor Speed</h3>
+		
+		
+	<h3 id="task-6-time-vs.-distance">Task 4: Time vs. Distance</h3>
+		
+		
+	<h3 id="Additional-tasks-for-5000-level-students">Additional tasks for 5000-level students</h3>
+	
