--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -118,7 +118,7 @@
              tx_characteristic_string.writeValue(tx_estring_value.c_str());
              break;
 	</code></pre></div></div>
-		<p><img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/2.jpeg" alt=""width="600" height="600"/></p>
+		<p><img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/task2.jpeg" alt=""width="600" height="600"/></p>
 		
 		
 			    
