--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -104,7 +104,8 @@
             break;
         /*
 	</code></pre></div></div>
-		<p></p>
+		<p>The first task is required to send the string from the computer to the Artemis board and get the augmented string from 
+		the board to the computer. I use the example command provided in ble_arduino, "tx_estring_value", to accomplish that. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/echo.jpeg" alt=""width="600" height="600"/>
 	 
 		
