--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -124,7 +124,8 @@
 		
 			    
 	<h3 id="task-3-notification-handler">Task 3: Notification Handler</h3>
-		
+		<p></p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/task3.jpeg" alt=""width="600" height="600"/>
 		
 		
 	
