--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -123,7 +123,10 @@
              tx_characteristic_string.writeValue(tx_estring_value.c_str());
              break;
 	</code></pre></div></div>
-		<p></p>
+		<p>This task is required to get the current time from Artemis to the computer. 
+		The method to achieve this is very similar to task one. The only difference is the data type. 
+		The code in Arduino is shown above and the code in Python and the result is shown below. 
+		The result is represented in milliseconds.</p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/task2.jpeg" alt=""width="600" height="600"/>
 		
 			    
