--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -153,6 +153,12 @@
           tx_characteristic_string.writeValue(tx_estring_value.c_str());
 		break;
 	</code></pre></div></div>
+		<p>In task 4, it is required to get the current temperature every second and last for 5 seconds. 
+		I use the for loop to run 5 loops in total, and for each loop, I set a delay for 1000 milliseconds(1 second). 
+		Inside the loop, the algorithm is also similar to task 1. 
+		I use the syntax "getTempDegC" to get the current temperature in the unit of Celcius. 
+		The code in Arduino is shown above and the code in Python and the result is shown below. 
+		The result is represented in milliseconds and Celcius.</p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/task4.jpeg" alt=""width="600" height="600"/>
 		
 		
