--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -131,7 +131,8 @@
 		
 			    
 	<h3 id="task-3-notification-handler">Task 3: Notification Handler</h3>
-		<p></p>
+		<p>In task 3, we are required to set the notification handler to receive the string value from Artemis. 
+		It uses the callback function method to get the time. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/task3.jpeg" alt=""width="600" height="600"/>
 		
 		
@@ -154,7 +155,7 @@
 		break;
 	</code></pre></div></div>
 		<p>In task 4, it is required to get the current temperature every second and last for 5 seconds. 
-		I use the for loop to run 5 loops in total, and for each loop, I set a delay for 1000 milliseconds(1 second). 
+		I use the for loop to run 5 times in total, and for each loop, I set a delay for 1000 milliseconds(1 second). 
 		Inside the loop, the algorithm is also similar to task 1. 
 		I use the syntax "getTempDegC" to get the current temperature in the unit of Celcius. 
 		The code in Arduino is shown above and the code in Python and the result is shown below. 
