--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -132,7 +132,10 @@
 			    
 	<h3 id="task-3-notification-handler">Task 3: Notification Handler</h3>
 		<p>In task 3, we are required to set the notification handler to receive the string value from Artemis. 
-		It uses the callback function method to get the time. </p>
+		It uses the callback function method to get the time. 
+		After settling this function, we do not need to run the receive string and print command every time. 
+		The only one we need is the "send_command".  The system will automatically print what you want. 
+		The screenshot shown below is the callback function I got. It uses task 2 to prove the feasibility. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/task3.jpeg" alt=""width="600" height="600"/>
 		
 		
