--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -162,6 +162,8 @@
 		Inside the loop, the algorithm is also similar to task 1. 
 		I use the syntax "getTempDegC" to get the current temperature in the unit of Celcius. 
 		The code in Arduino is shown above and the code in Python and the result is shown below. 
+		Here, I still use the notification handler function I set up in task 3. 
+		Therefore, same as the get time millis example, I can get what I want by using just one line command. 
 		The result is represented in milliseconds and Celcius.</p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/task4.jpeg" alt=""width="600" height="600"/>
 		
