--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -161,6 +161,7 @@
 		I use the for loop to run 5 times in total, and for each loop, I set a delay for 1000 milliseconds(1 second). 
 		Inside the loop, the algorithm is also similar to task 1. 
 		I use the syntax "getTempDegC" to get the current temperature in the unit of Celcius. 
+		To strictly follow the format, I also include an if loop to make sure there's no "|" symbol at the end. 
 		The code in Arduino is shown above and the code in Python and the result is shown below. 
 		Here, I still use the notification handler function I set up in task 3. 
 		Therefore, same as the get time millis example, I can get what I want by using just one line command. 
