--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -176,7 +176,11 @@
 		
 		
 	<h3 id="task-6-limitation">Task 6: Limitation</h3>
-		<p></p>
+		<p>In this discussion question, we are required to figure out the limitation to send a 16-bit value with 150 Hz 
+		in 5 seconds to the Artemis board with the 384kB RAM. By doing the unit conversion, I got 1 kB = 8000 bits. 
+		So, 384 kB = 8000 * 384 = 3072000 bits. The Artemis board can receive the form of 16-bit values with 16 * 150 * 5 = 12000 bits every time. 
+		3072000 / 12000 = 256. Therefore, the limitation of this problem is that the Artemis board can receive 256 times of 
+		16-bit value with 150 Hz in 5 seconds before running out of memory. </p>
 		
 		
 		
