--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -187,7 +187,13 @@
             }
           break;
 	</code></pre></div></div>
-		<p></p>
+		<p>In task 5, we have to get a more rapid temperature using a similar method in task 4. 
+		It requires showing at least 50 temperature values in 5 seconds. 
+		Based on the Arduino code used in task 4, I add an outer loop to make the system run 5 temperature data 10 times to get 50 data in total. 
+		And then, I also change the delay value from 1000 milliseconds (1 second) to 100 milliseconds (0.1 seconds). 
+		That will make the loop finish in 5 seconds to reach the task requirement. 
+		The code in Arduino is shown above and the code in Python and the result is shown below. 
+		Notes, the notification handler is used. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/task5.jpeg" alt=""width="600" height="600"/>
 		
 		
