--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-  <title>Wenxin Li</title>
+  <title>LAB3</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -60,10 +60,12 @@
 	
 		
 	<h3 id="objective">Objective</h3>
-		
+		<p>This lab mainly focuses on the performance of sensors connecting to the robot. 
+		We have to fully understand how the ToF works and test the sensor's mode, speed, and reliability. </p>
 		
 	
 	<h3 id="prelab-discussion">Prelab Discussion</h3>
+		
 		
 		
 	<h3 id="task-1-tof-sensor-connected">Task 1: ToF sensor connected</h3>
