--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -233,10 +233,14 @@
 		for loop is trying to get the data 6 times to improve the accuracy. Then the data rate can be calculated as shown below. 
 		And the Arduino code is provided above. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/task6.jpeg" alt=""width="600" height="600"/>
+		<p>After getting the data above, I put them all in MATLAB to create the plot. 
+		The data rate can be calculated by using the data size/time. The plot result is shown below. 
+		It is an increasing line. Therefore, as the data size increases, the data rate will also be increasing. 
+		So, there will be a larger overhead if there are short packets. And larger replies can help to reduce the overhead.</p> 
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/plot1.jpeg" alt=""width="600" height="600"/>	      
+			
+			
+	<h3 id="additional-task-2">Additional Task 2</h3>
 		
-		      
-			
-			
-			
 			
 			
