--- a/lab/lab2.html
+++ b/lab/lab2.html
@@ -237,10 +237,12 @@
 		The data rate can be calculated by using the data size/time. The plot result is shown below. 
 		It is an increasing line. Therefore, as the data size increases, the data rate will also be increasing. 
 		So, there will be a larger overhead if there are short packets. And larger replies can help to reduce the overhead.</p> 
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/plot1.jpeg" alt=""width="600" height="600"/>	      
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab2/plot1.jpeg" alt=""width="400" height="400"/>	      
 			
 			
 	<h3 id="additional-task-2">Additional Task 2</h3>
-		
+		I still use the same python and Arduino code in additional task 1, but I changed the range of the outer loop from (1, 15) to (1, 20). 
+		This can help to lengthen the string size. But when I run it, the system shows error with "Cannot write string larger than 150 bytes". 
+		So, it is reliable except the data size is larger than 150 bytes. 
 			
 			
