--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -75,7 +75,11 @@
 		In Arduino code, we could first set the XSHUT as LOW to shut down one sensor, 
 		and then we have to change the I2C address for the other sensor.  After that, we could reset the XSHUT to HIGH. 
 		These two ToF then will have a different addresses and they can work well at the same time. </p>
-		
+		<p>For the placement of the sensor, I choose to place these two sensors at 90 degrees. 
+		So, it can make sure it can detect obstacles from both front and side. 
+		This can largely improve the safety of the robot. But if the obstacles are on the other side or the behind the robot, it will miss.</p>
+		<p>The picture provided below is the sketch of the wiring diagram.</p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/wire.jpeg"/>
 		
 		
 	<h3 id="task-1-tof-sensor-connected">Task 1: ToF sensor connected</h3>
