--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -79,11 +79,12 @@
 		So, it can make sure it can detect obstacles from both front and side. 
 		This can largely improve the safety of the robot. But if the obstacles are on the other side or the behind the robot, it will miss.</p>
 		<p>The picture provided below is the sketch of the wiring diagram.</p>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/wire.jpeg"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/wire.jpeg" alt=""width="500" height="500"/>
 		
 		
 	<h3 id="task-1-tof-sensor-connected">Task 1: ToF sensor connected</h3>
-		
+		<p>The picture below is the physical connection of my ToF sensor and QWIIC breakout board.</p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/wire2.jpeg" alt=""width="500" height="500"/>	
 		
 		
 	<h3 id="task-2-Artemis-scanning-for-I2C-device">Task 2: Artemis scanning for I2C device</h3>
