--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -88,7 +88,11 @@
 		
 		
 	<h3 id="task-2-Artemis-scanning-for-I2C-device">Task 2: Artemis scanning for I2C device</h3>
-		
+		<p>The default I2C address is 0x52, which is 0101001. It can be get from the datasheet of VL53L1X. 
+		The scanning for the I2C can be found by running the example code "Example05_Wire_I2C". 
+		The address is shown on the serial monitor. The screenshot is shown below, which is 0x29. 
+		That is because the LSBit is in R/W format and the address is shifted. Therefore, the address is matched. </p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/I2C.jpeg" alt=""width="600" height="600"/>
 		
 		
 	<h3 id="task-3-sensor-data">Task 3: Sensor Data</h3>
