--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -114,6 +114,10 @@
 		
 	<h3 id="task-4-2-tof-sensor">Task 4: 2 ToF Sensor</h3>
 		
+	<iframe width="560" height="315"  
+ 	src="https://www.youtube.com/embed/laE1VA7QTAY"  
+ 	frameborder="0" allowfullscreen></iframe>
+	
 		
 		
 	<h3 id="task-5-tof-sensor-speed">Task 5: ToF Sensor Speed</h3>
