--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -96,7 +96,7 @@
 		
 		
 	<h3 id="task-3-sensor-data">Task 3: Sensor Data</h3>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/I2C.jpeg" alt=""width="600" height="600"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/table.jpeg" alt=""width="600" height="600"/>
 		<p>The table above is the Maximum distance vs. Distance mode under the ambient light table from the datasheet. 
 		There are three different modes in total: short, medium, and long. We can get some simple relationships from the data provided. 
 		With the long-distance mode, it has the biggest impact under strong ambient light. 
